--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.password=firewall
 server.port=4000
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
+
+security.jwt.expiration.minutes=30
+security.jwt.secret.key=$2a$12$nfB60S1ShhqEqEn8G681kOfa29UCEACfT/bVmy6ZwQsTx9VAsrrCa
