--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,5 @@ server.port=4000
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 
-security.jwt.expiration.minutes=30
-security.jwt.secret.key=$2a$12$nfB60S1ShhqEqEn8G681kOfa29UCEACfT/bVmy6ZwQsTx9VAsrrCa
+security.jwt.expiration-minutes=30
+security.jwt.secret-key=dGhpcyBpcyBteSBzZWN1cmUga2V5IGFuZCB5b3UgY2Fubm90IGhhY2sgaXQ=
